--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Why I want to become a developer?</h1>
+	<p>
+		<h3>People choose to become developers for various reasons. Here are some common ones:	</h3>	
+	</p>
+	<p>1. Passion for technology: Many individuals are fascinated by technology and how it works. Becoming a developer allows them to create, build, and innovate with technology every day.</p>
+	<p>2. Problem-solving skills: Developing software is often about finding solutions to complex problems. Developers enjoy the challenge of breaking down problems into manageable parts and creating a solution from scratch.</p>
+	<p>3. Creativity: Web and software development offer a lot of creative freedom. Developers can bring their ideas to life, build things from scratch, and create unique and innovative solutions.</p>
+	<p>4. Career growth: Technology is a rapidly growing field, and there is always a high demand for skilled developers. Becoming a developer can lead to a challenging and rewarding career with opportunities for growth and advancement.</p>
+	<p>5. Financial stability: Developers are in high demand, and often command high salaries. Pursuing a career in this field can provide a stable financial future.</p>
+	<p>6. Ability to make a positive impact: By building software and technology, developers can create products that improve people's lives and solve real-world problems.</p>
+	<p>These are just a few of the reasons people choose to become developers. Everyone's motivations are different, but the field offers a unique combination of creativity, problem-solving, and career opportunities.</p>
 
 </body>
 
